--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,24 @@ spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.datasource.url=jdbc:postgresql://localhost/progettoFootball
+#spring.datasource.url=jdbc:postgresql://progettofootball.cygyujkppsvr.eu-west-3.rds.amazonaws.com/progettoFootball
+
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
 #==================================
-server.port=8081
+#server.port=8081
+server.port=5000
+
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 #==================================
