Tentativo per OAuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,11 @@ spring.thymeleaf.encoding=UTF-8
 #==================================
 spring.messages.basename=messages/messages
 spring.messages.encoding=ISO-8859-1
+#=================================
+# = OAuth
+#=================================
+#spring.security.oauth2.client.registration.github.client-id=078485b357418e7063e6
+#spring.security.oauth2.client.registration.github.client-secret=2080c3d4e65cda30f3ac8f9b56a4e368eb1b75a2
 
 
 
