--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,13 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost/progettoFootball
-#spring.datasource.url=jdbc:postgresql://progettofootball.cygyujkppsvr.eu-west-3.rds.amazonaws.com/progettoFootball
+#spring.datasource.url=jdbc:postgresql://localhost/progettoFootball
+spring.datasource.url=jdbc:postgresql://progettofootball.cygyujkppsvr.eu-west-3.rds.amazonaws.com/progettoFootball
 
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -21,8 +21,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
 #==================================
-server.port=8081
-#server.port=5000
+#server.port=8081
+server.port=5000
 
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
